update with answer to part 2 of day 1 AoC

--- a/advent of code 2017 - day 1.ipynb
+++ b/advent of code 2017 - day 1.ipynb
@@ -33,7 +33,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "int desired_sum = 0;"
+    "int desired_sum = 0;\n",
+    "int half_size = input.length() / 2;"
    ]
   },
   {
@@ -67,12 +68,60 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The answer is: 1158(std::basic_ostream<char, std::char_traits<char> >::__ostream_type &) @0x2dac1e0\n"
+      "The answer for part one is: 1158(std::basic_ostream<char, std::char_traits<char> >::__ostream_type &) @0x2dac1e0\n"
      ]
     }
    ],
    "source": [
-    "cout << \"The answer is: \" << desired_sum"
+    "cout << \"The answer for part one is: \" << desired_sum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "int desired_sum_part_two = 0;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for (int i = 0; i < input.length(); i++) {\n",
+    "    char value = input[i];\n",
+    "    int next_index;\n",
+    "    // if we are in the first index\n",
+    "    if (i + half_size >= input.length()) {\n",
+    "        next_index = i + half_size - input.length();\n",
+    "    } else {\n",
+    "        next_index = i + half_size;\n",
+    "    }\n",
+    "    char next_value = input[next_index];\n",
+    "    if (value == next_value) {\n",
+    "        desired_sum_part_two += (value - '0'); // this converts the char to an int\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The answer for part two is: 1132"
+     ]
+    }
+   ],
+   "source": [
+    "cout << \"The answer for part two is: \" << desired_sum_part_two;"
    ]
   }
  ],
